// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers layout should handle CHANGE_LAYOUT 1`] = `
Object {
  "hierarchicalLayout": true,
  "isError": false,
  "message": "",
  "view": "Structure",
}
`;

exports[`reducers layout should handle CHANGE_VIEW 1`] = `
Object {
  "hierarchicalLayout": false,
  "isError": false,
  "message": "",
  "view": "JsonPreview",
}
`;

exports[`reducers layout should handle CLEAR_ERRORS 1`] = `
Object {
  "hierarchicalLayout": false,
  "isError": false,
  "message": "",
  "title": "",
  "view": "Structure",
}
`;

exports[`reducers layout should handle initial state 1`] = `
Object {
  "buttons": Array [],
  "hierarchicalLayout": false,
  "isError": false,
  "isSettingsWindowOpen": false,
  "message": "",
  "progress": Object {},
  "title": "",
  "view": "Structure",
}
`;
